Closes tickets #266 and #281. Rename TemporalAttestation.certainty to TemporalAttestation.attestationConfidence. Integrate vocabulary control using an ATVM-managed, VDEX-formatted TemporalAttestationConfidenceThesaurus.

--- a/i18n/generated.pot
+++ b/i18n/generated.pot
@@ -177,6 +177,11 @@ msgstr ""
 msgid "PleiadesEntity_label_accuracy"
 msgstr ""
 
+#. Default: "Attestationconfidence"
+#: content\TemporalAttestation.py
+msgid "PleiadesEntity_label_attestationConfidence"
+msgstr ""
+
 #. Default: "Certainty"
 #: content\TemporalAttestation.py
 #: content\PlacefulAssociation.py
