Closes ticket #239. Automatic transliteration of attested names, as well as population of titles for adds/edits through-the-web. Modification of loader code to handle coincident model changes and invoke auto-transliteration as well - UPDATE YOUR EXTERNAL METHODS. Make tests check everything and work properly (Neverpolis is illegal according to Latin name validation rules).

--- a/i18n/generated.pot
+++ b/i18n/generated.pot
@@ -278,6 +278,11 @@ msgstr ""
 msgid "PleiadesEntity_label_nameReconstructed"
 msgstr ""
 
+#. Default: "Transliterated name"
+#: content\Name.py
+msgid "PleiadesEntity_label_nameTransliterated"
+msgstr ""
+
 #. Default: "Name Type"
 #: content\Name.py
 msgid "PleiadesEntity_label_nameType"
